genome.css additions for styling of CanvasTrack controls, and also some track & label z-index fixes.

--- a/genome.css
+++ b/genome.css
@@ -76,7 +76,7 @@ div.track {
     position: absolute;
     left: 0px;
     width: 100%;
-    z-index: 5;
+/*    z-index: 5; */
 }
 
 .track.dojoDndItemOver {
@@ -917,6 +917,35 @@ div.block  {
 }
 */
 
+/*
 canvas.block-canvas  {
  border: solid red 1px;
+}
+*/
+
+div.graph-color-picker {
+/*    background-color: white;  */
+    border: 2px black solid;
+}
+
+div.graph-range-slider {
+    height: 165px;
+    width: 10px;
+}
+
+
+div.active-track-label {
+    z-index: 200;
+}
+
+div.canvas-track-control {
+    left: 0px;
+    top: 0px;
+    width: 300px;
+    height: 250px;
+    padding: 10px;
+    z-index: 190;
+    background-color: white; */
+/* background-color: #005555; */
+    border: 2px black solid;
 }
